[tool.poetry]
name = "python-lambda"
version = "0.1.0"
description = ""
authors = ["migitahiroaki <carp01hiro@gmail.com>"]

packages = [
    { include = "layer", from = "src" },
    { include = "notify_discord", from = "src" },
    { include = "kanachu_bus", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
aws-lambda-powertools = "^2.32.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
pytest-mock = "^3.12.0"
jmespath = "^1.0.1"
boto3 = "^1.34.34"
botocore-stubs = "^1.34.34"
aws-lambda-powertools = "^2.33.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
isort = "^5.13.2"
typing-extensions = "^4.9.0"
typeguard = "^4.1.5"
black = "^24.1.1"

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests",]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
